<resources>
    <string name="app_name">Menu app</string>
    <string name="button">Button</string>
    <string name="type_menu">Type Of Food</string>
    <string name="go_to_menu">Go To Menu</string>
    <string name="hotel_food_menu">Hotel Food Menu</string>
    <string name="home_food_menu">Home Food Menu</string>
    <string name="menu_type">Menu Type</string>
    <string name="hotel_style_food_menu">Hotel Food Menu</string>
    <string name="H_food1">1. Pizza</string>
    <string name="H_food2">2. Soup</string>
    <string name="H_food3">3. Sandwich</string>
    <string name="H_food4">4. Patties</string>
    <string name="H_food5">5. French Fries</string>
    <string name="H_food6">6. Manchurian </string>
    <string name="H_food7">7. Pasta</string>
    <string name="H_food8">8. Noodles</string>
    <string name="H_food9">9. Momos</string>
    <string name="H_food10">10. Aloo Tikki</string>
    <string name="H_food11">11. Garlic Bread</string>
    <string name="H_food12">12. Zingy Parcel</string>
    <string name="H_food13">13. Burger</string>
    <string name="H_food14">14. Cutlet</string>
    <string name="H_food15">15. Potato Lollipop</string>
    <string name="street_food_menu">Street Food Menu</string>
    <string name="S_food1">1. Samosa</string>
    <string name="S_food2">2. Pav Bhaji </string>
    <string name="S_food3">3. Pani puri </string>
    <string name="S_food4">4. Dabeli</string>
    <string name="S_food5">5. Bhajiya</string>
    <string name="S_food6">6. Vada Pav</string>
    <string name="S_food7">7. Bread Pakora</string>
    <string name="S_food8">8. Dahi vada</string>
    <string name="S_food9">9. Dosa </string>
    <string name="S_food10">10. Dal Vada</string>
    <string name="S_food11">food11 name</string>
    <string name="S_food12">food12 name</string>
    <string name="S_food13">food13 name</string>
    <string name="S_food14">food14 name</string>
    <string name="S_food15">food15 name</string>
    <string name="S_food16">food16 name</string>
    <string name="S_food18">food18 name</string>
    <string name="S_food17">food17 name</string>
    <string name="S_food19">food19 name</string>
    <string name="S_food20">food20 name</string>
    <string name="O_food1">TextView</string>
    <string name="O_food2">TextView</string>
    <string name="O_food3">TextView</string>
    <string name="O_food4">TextView</string>
    <string name="O_food5">TextView</string>
    <string name="O_food6">TextView</string>
    <string name="O_food7">TextView</string>
    <string name="O_food8">TextView</string>
    <string name="O_food9">TextView</string>
    <string name="O_food10">TextView</string>
    <string name="O_food11">TextView</string>
    <string name="O_food12">TextView</string>
    <string name="O_food13">TextView</string>
    <string name="O_food14">TextView</string>
    <string name="O_food15">TextView</string>
    <string name="O_food16">TextView</string>
    <string name="O_food17">TextView</string>
    <string name="O_food18">TextView</string>
    <string name="O_food19">TextView</string>
    <string name="O_food20">TextView</string>
    <string name="snake_menu">Snacks Menu</string>
    <string name="N_food1">TextView</string>
    <string name="N_food2">TextView</string>
    <string name="N_food3">TextView</string>
    <string name="N_food4">TextView</string>
    <string name="N_food5">TextView</string>
    <string name="snake_menu2">snake menu</string>
</resources>